# greylock_elliptics

./: CMakeLists.txt  Dockerfile  README.md  greylock-bf.spec
conf/: insert.json  search.json  search_generic.json  server-config.json
conf/consul.d/: index.json  normalize.json  search.json
debian/: changelog  control  greylock.install  rules
include/greylock/: bucket.hpp  bucket_processor.hpp  core.hpp  elliptics.hpp  elliptics_stat.hpp  index.hpp  intersection.hpp  io.hpp  key.hpp  page.hpp
include/indexes/: bucket.hpp  bucket_transport.hpp  core.hpp  elliptics.hpp  elliptics_stat.hpp  error.hpp  index.hpp  intersection.hpp  key.hpp  page.hpp
src/: CMakeLists.txt  client.py  consul.py  consul_client.py  index.cpp  index.py  index_directory.go  meta.cpp  page_info.cpp  perf.py  search.py  server.cpp  test.cpp
